--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
-
+<%-# <p id="notice"></p> -%>
+<%= image_tag @band.image.url(:medium) %>
 <p>
   <strong>Title:</strong>
   <%= @band.title %>
