--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,34 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% if !user_signed_in? %>
+<div class="jumbotron">
+  <h1>Get your band heard</h1>
+  <p>A a free site where you find the hottest bands</p>
+  <p><%= link_to "Sign up to add your own band", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+</div>
+<% end %>
 
-<h1>Listing Bands</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Band members</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @bands.each do |band| %>
-      <tr>
-        <td><%= image_tag band.image.url(:medium)%></td>
-        <td><%= band.title %></td>
-        <td><%= band.description %></td>
-        <td><%= band.band_members %></td>
-        <td><%= band.rating %></td>
-        <td><%= link_to 'Show', band %></td>
-        <td><%= link_to 'Edit', edit_band_path(band) %></td>
-        <td><%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Band', new_band_path %>
+<div class="row">
+  <% @bands.each do |band| %>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+    <%= link_to (image_tag band.image.url(:medium), class: 'image'), band %>
+    </div>
+  </div>
+  <% end %>
+</div>
