--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -19,7 +19,7 @@
               </tr>
               <tr>
                <td> <strong>Description:</strong></td>
-  <td>><%= @band.description %></td>
+  <td><%= @band.description %></td>
               </tr>
               <tr>
                <td> <strong>Band members:</strong></td>
