--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -69,4 +69,11 @@
             return $(this).attr('data-score');
     }
   });
+  
+  <div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 </script>
