--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -10,7 +10,10 @@
       </ul>
     </div>
   <% end %>
-
+<div class="field">
+   <%= f.label :user_id %>
+  
+  </div>
   <div class="field">
    <div id="star-rating"></div>
   </div>
