--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
                 <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
                 <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
                 <li><%= link_to "Sign In with facebook", user_omniauth_authorize_path(:facebook), class: "active" %></li>
+                <li><%= link_to "Sign In with twitter", user_omniauth_authorize_path(:twitter), class: "active" %></li>
 
                 
                 <% end %>
