--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
                 <li><%= link_to "New Band", new_band_path, class: "active" %></li>
                 <li><%= link_to "Account", edit_user_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete%></li>
-                
+                <li><%= link_to "Logs", logs_path %></li>
     
                 <% else %>
                 <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
